<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@color/black"
    android:weightSum="1">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="107dp"
        android:id="@+id/burgerImg"
        android:contentDescription="@string/ui_tabname_dinner"
        android:src="@drawable/burger"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="98dp"
        app:srcCompat="@drawable/sandwich"
        android:id="@+id/imageView6"
        android:src="@drawable/sandwich" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="115dp"
        app:srcCompat="@drawable/mac_n_cheese"
        android:id="@+id/imageView7"
        android:src="@drawable/mac_n_cheese" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:id="@+id/entGroup">

        <RadioButton
            android:text="@string/burger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/burger"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp" />

        <RadioButton
            android:text="@string/sandwich"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sandwich"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp" />

        <RadioButton
            android:text="@string/mac_n_cheese"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cheese"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp" />

        <RadioButton
            android:text="@string/none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/noneEnt"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp" />

    </RadioGroup>

    <Button
        android:text="@string/total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/calcEnt" />

</LinearLayout>