<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/ui_tabname_appitizer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textColor="@color/colorAccent"
        android:textSize="24sp" />

    <TextView
        android:text="TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appPrice"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:gravity="center_horizontal" />

    <TextView
        android:text="@string/ui_tabname_entree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textColor="@color/colorAccent"
        android:textSize="24sp" />

    <TextView
        android:text="TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/entPrice"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:gravity="center_horizontal" />

    <TextView
        android:text="@string/ui_tabname_desert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:textColor="@color/colorAccent"
        android:textSize="24sp" />

    <TextView
        android:text="TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/desPrice"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:gravity="center_horizontal" />

    <TextView
        android:text="@string/totalT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:textColor="@color/colorAccent"
        android:textSize="24sp" />

    <TextView
        android:text="TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/totalPrice"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:gravity="center_horizontal" />
</LinearLayout>